# geocode_rocks

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt  script.ipynb  script.py  test.ipynb
data/: arizona_boulders.csv  arizona_boulders_processed.csv  bc_boulders.csv  bc_boulders_processed.csv  bc_ropes.csv  bc_ropes_processed.csv  colorado_boulders.csv  colorado_boulders_processed.csv  jtree_boulders.csv  jtree_boulders_processed.csv  jtree_boulders_processed_popular.csv  la_boulders.csv  la_boulders_processed.csv  nevada_boulders.csv  nevada_boulders_processed.csv  new_mexico_boulders.csv  new_mexico_boulders_processed.csv  rocktown_boulders.csv  rocktown_boulders_processed.csv  sd_boulders.csv  sd_boulders_processed.csv  sf_boulders.csv  sf_boulders_processed.csv  tramway_boulders.csv  tramway_boulders_processed.csv  utah_boulders.csv  utah_boulders_processed.csv
src/: lib.rs
