[package]
name = "rusty_scrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "rusty_scrapper"
crate-type = ["cdylib"]  # Needed for Python extensions

[dependencies]
polars = { version = "0.35", features = ["lazy", "strings"] }
futures = "0.3"
regex = "1.10"
reqwest = "0.11"
scraper = "0.17"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }
tokio-util = "0.7"
ctrlc = "3.0"